02-deployment/overlay/ingress/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rancher-demo.cl.monach.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo
            port: 
              number: 8080
